--- a/channel_html_sources/channel_16.html
+++ b/channel_html_sources/channel_16.html
@@ -117,39 +117,4 @@
 </head>
 <body>
 
-
-<div id="channelInfo">
-    <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-11140-j96syfuo-v1/imageContent-11140-j96syfuo-m1.png" alt="Channel Logo">
-    <div class="channelName">Zee Bihar Jharkhand</div>
-</div>
-
-<div id="infoBox">
-    <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-11140-j96syfuo-v1/imageContent-11140-j96syfuo-m1.png" background= "black" alt="Channel Logo">
-    <div class="title" style="color: white">Zee Bihar Jharkhand</div>
-    <div class="description" style="color: white" >@𝐓𝐆_𝐀𝐀𝐃𝐈</div>
-</div>
-
-<div id="jwplayerDiv"></div>
-
-<a href="https://t.me/tataplayonline" target="_blank">
-    <div id="telegramInfo">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Telegram_logo.svg/1200px-Telegram_logo.svg.png" alt="Telegram">
-        <div class="telegramName">𝗪𝗢𝗥𝗟𝗗 𝗜𝗣𝗧𝗩 𝗠𝗔𝗖 𝗫𝗦𝗧𝗥𝗘𝗔𝗠 𝗖𝗢𝗗𝗘𝗦</div>
-    </div>
-</a>
-
-<script>
-    jwplayer.key = 'Khpp2dHxlBJHC8MCmLnBuV2jK/DwDnJMniwF6EO9HC/riJ712ZmbHg=='; // Include your JW Player key
-    jwplayer("jwplayerDiv").setup({
-    	stretching: 'exactfit',
-        file: "https://tgaadi-web.tech/TP/tg-aadi.php/https://bpprod4catchup.akamaized.net/bpk-tv/irdeto_com_Channel_389/output/master.mpd",
-        drm: {
-            clearkey: {
-                key: 'f0f6cd17be099a7ed8bfafb0bcc04756',
-                keyId: 'ae3679c4aad75c79a9002b245828faba'
-            }
-        }
-    });
-</script>
-</body>
-</html>
+Error decoding JSON data from URL
