--- a/channel_html_sources/channel_47.html
+++ b/channel_html_sources/channel_47.html
@@ -117,39 +117,4 @@
 </head>
 <body>
 
-
-<div id="channelInfo">
-    <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-192-j5fsr3s0-v1/imageContent-192-j5fsr3s0-m1.png" alt="Channel Logo">
-    <div class="channelName">News18 Tamil Nadu</div>
-</div>
-
-<div id="infoBox">
-    <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-192-j5fsr3s0-v1/imageContent-192-j5fsr3s0-m1.png" background= "black" alt="Channel Logo">
-    <div class="title" style="color: white">News18 Tamil Nadu</div>
-    <div class="description" style="color: white" >@𝐓𝐆_𝐀𝐀𝐃𝐈</div>
-</div>
-
-<div id="jwplayerDiv"></div>
-
-<a href="https://t.me/tataplayonline" target="_blank">
-    <div id="telegramInfo">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Telegram_logo.svg/1200px-Telegram_logo.svg.png" alt="Telegram">
-        <div class="telegramName">𝗪𝗢𝗥𝗟𝗗 𝗜𝗣𝗧𝗩 𝗠𝗔𝗖 𝗫𝗦𝗧𝗥𝗘𝗔𝗠 𝗖𝗢𝗗𝗘𝗦</div>
-    </div>
-</a>
-
-<script>
-    jwplayer.key = 'Khpp2dHxlBJHC8MCmLnBuV2jK/DwDnJMniwF6EO9HC/riJ712ZmbHg=='; // Include your JW Player key
-    jwplayer("jwplayerDiv").setup({
-    	stretching: 'exactfit',
-        file: "https://tgaadi-web.tech/TP/tg-aadi.php/https://bpprod4catchup.akamaized.net/bpk-tv/irdeto_com_Channel_373/output/master.mpd",
-        drm: {
-            clearkey: {
-                key: '13160f642ea4a4bc467d4e53afa6c033',
-                keyId: '1f484f6ec64e5f0dbaa79d29fe94ff99'
-            }
-        }
-    });
-</script>
-</body>
-</html>
+Error decoding JSON data from URL
