Add output files

--- a/channel_html_sources/channel_64.html
+++ b/channel_html_sources/channel_64.html
@@ -117,37 +117,4 @@
 </head>
 <body>
 
-
-<div id="channelInfo">
-    <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-279-j5jcwqts-v1/imageContent-279-j5jcwqts-m2.png" alt="Channel Logo">
-    <div class="channelName">Manorama News</div>
-</div>
-
-<div id="infoBox">
-    <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-279-j5jcwqts-v1/imageContent-279-j5jcwqts-m2.png" background= "black" alt="Channel Logo">
-    <div class="title" style="color: white">Manorama News</div>
-    <div class="description" style="color: white" >Channel Description</div>
-</div>
-
-<div id="jwplayerDiv"></div>
-
-<div id="telegramInfo">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Telegram_logo.svg/1200px-Telegram_logo.svg.png" alt="Telegram Logo">
-    <div class="telegramName">𝗪𝗢𝗥𝗟𝗗 𝗜𝗣𝗧𝗩 𝗠𝗔𝗖 𝗫𝗦𝗧𝗥𝗘𝗔𝗠 𝗖𝗢𝗗𝗘𝗦</div>
-</div>
-
-<script>
-    jwplayer.key = 'Khpp2dHxlBJHC8MCmLnBuV2jK/DwDnJMniwF6EO9HC/riJ712ZmbHg=='; // Include your JW Player key
-    jwplayer("jwplayerDiv").setup({
-        stretching: 'exactfit',
-        file: "https://tgaadi-web.tech/TP/Tata.php/https://bpprod7catchup.akamaized.net/bpk-tv/irdeto_com_Channel_244/output/master.mpd",
-        drm: {
-            clearkey: {
-                key: '43339b51eb25367379bf26fec17fa21d',
-                keyId: 'b5d0fb89033054e79af3b71d1a5defcc'
-            }
-        }
-    });
-</script>
-</body>
-</html>
+Error decoding JSON data from URL
