--- a/channel_html_sources/channel_31.html
+++ b/channel_html_sources/channel_31.html
@@ -117,37 +117,4 @@
 </head>
 <body>
 
-
-<div id="channelInfo">
-    <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-105-j5fl5t1k-v1/imageContent-105-j5fl5t1k-m1.png" alt="Channel Logo">
-    <div class="channelName">Aastha</div>
-</div>
-
-<div id="infoBox">
-    <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-105-j5fl5t1k-v1/imageContent-105-j5fl5t1k-m1.png" background= "black" alt="Channel Logo">
-    <div class="title" style="color: white">Aastha</div>
-    <div class="description" style="color: white" >Channel Description</div>
-</div>
-
-<div id="jwplayerDiv"></div>
-
-<div id="telegramInfo">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Telegram_logo.svg/1200px-Telegram_logo.svg.png" alt="Telegram Logo">
-    <div class="telegramName">𝗪𝗢𝗥𝗟𝗗 𝗜𝗣𝗧𝗩 𝗠𝗔𝗖 𝗫𝗦𝗧𝗥𝗘𝗔𝗠 𝗖𝗢𝗗𝗘𝗦</div>
-</div>
-
-<script>
-    jwplayer.key = 'Khpp2dHxlBJHC8MCmLnBuV2jK/DwDnJMniwF6EO9HC/riJ712ZmbHg=='; // Include your JW Player key
-    jwplayer("jwplayerDiv").setup({
-        stretching: 'exactfit',
-        file: "https://tgaadi-web.tech/TP/Tata.php/https://bpprod4catchup.akamaized.net/bpk-tv/irdeto_com_Channel_341/output/master.mpd",
-        drm: {
-            clearkey: {
-                key: '7d44eeb7765d7404ce2cf7c4faee4286',
-                keyId: 'd5c5447c0ed85838ae82e499933b8472'
-            }
-        }
-    });
-</script>
-</body>
-</html>
+Error decoding JSON data from URL
