--- a/channel_html_sources/channel_92.html
+++ b/channel_html_sources/channel_92.html
@@ -117,37 +117,4 @@
 </head>
 <body>
 
-
-<div id="channelInfo">
-    <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-405-j5jr3sz4-v2/imageContent-405-j5jr3sz4-m2.png" alt="Channel Logo">
-    <div class="channelName">Tata Play Fitness</div>
-</div>
-
-<div id="infoBox">
-    <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-405-j5jr3sz4-v2/imageContent-405-j5jr3sz4-m2.png" background= "black" alt="Channel Logo">
-    <div class="title" style="color: white">Tata Play Fitness</div>
-    <div class="description" style="color: white" >Channel Description</div>
-</div>
-
-<div id="jwplayerDiv"></div>
-
-<div id="telegramInfo">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Telegram_logo.svg/1200px-Telegram_logo.svg.png" alt="Telegram Logo">
-    <div class="telegramName">𝗪𝗢𝗥𝗟𝗗 𝗜𝗣𝗧𝗩 𝗠𝗔𝗖 𝗫𝗦𝗧𝗥𝗘𝗔𝗠 𝗖𝗢𝗗𝗘𝗦</div>
-</div>
-
-<script>
-    jwplayer.key = 'Khpp2dHxlBJHC8MCmLnBuV2jK/DwDnJMniwF6EO9HC/riJ712ZmbHg=='; // Include your JW Player key
-    jwplayer("jwplayerDiv").setup({
-        stretching: 'exactfit',
-        file: "https://tgaadi-web.tech/TP/Tata.php/https://bpprod4catchup.akamaized.net/bpk-tv/irdeto_com_Channel_209/output/master.mpd",
-        drm: {
-            clearkey: {
-                key: 'f9b24bb9db7734e8b441db46964fff28',
-                keyId: '1285fc0cce4a5da680bdd416f1977688'
-            }
-        }
-    });
-</script>
-</body>
-</html>
+Error decoding JSON data from URL
