Add output files

--- a/channel_html_sources/channel_633.html
+++ b/channel_html_sources/channel_633.html
@@ -153,8 +153,8 @@
         file: "https://bpprod5catchup.akamaized.net/bpk-tv/irdeto_com_Channel_1944/output/dtvhindi.mpd",
         drm: {
             clearkey: {
-                key: 'e6a51b58063523e3ba448cb19f62a9a0',
-                keyId: 'ec0a0b2d6cfa575d828b824e5f9b4ae0'
+                key: '',
+                keyId: ''
             }
         }
     });
