--- a/channel_html_sources/channel_637.html
+++ b/channel_html_sources/channel_637.html
@@ -153,8 +153,8 @@
         file: "https://bpprod5catchup.akamaized.net/bpk-tv/irdeto_com_Channel_1951/output/dtvhindi.mpd",
         drm: {
             clearkey: {
-                key: '245dbd2e330833b8beaab5ced33764cf',
-                keyId: '7a150f19238a59a5a6ee8880fc767467'
+                key: '',
+                keyId: ''
             }
         }
     });
