--- a/channel_html_sources/channel_640.html
+++ b/channel_html_sources/channel_640.html
@@ -153,8 +153,8 @@
         file: "https://bpprod1catchup.akamaized.net/bpk-tv/irdeto_com_Channel_1960/output/dtvhindi.mpd",
         drm: {
             clearkey: {
-                key: 'b4d068909bbc5fa5033c935bc7c22aaf',
-                keyId: '92183231649a58adaf80ed317d7ce003'
+                key: '',
+                keyId: ''
             }
         }
     });
