--- a/channel_html_sources/channel_642.html
+++ b/channel_html_sources/channel_642.html
@@ -153,8 +153,8 @@
         file: "https://bpprod1catchup.akamaized.net/bpk-tv/irdeto_com_Channel_1963/output/dtvhindi.mpd",
         drm: {
             clearkey: {
-                key: '40fb597fa01d24974be41631a51a3dfc',
-                keyId: '2e22a32b2c1b50e0b240557ead415932'
+                key: '',
+                keyId: ''
             }
         }
     });
