--- a/channel_html_sources/channel_632.html
+++ b/channel_html_sources/channel_632.html
@@ -153,8 +153,8 @@
         file: "https://bpprod5catchup.akamaized.net/bpk-tv/irdeto_com_Channel_1943/output/dtvhindi.mpd",
         drm: {
             clearkey: {
-                key: '028d887ab5d42b613a032b56e78dd65a',
-                keyId: '89fb7048c1465c67a03de46b416e5c76'
+                key: '',
+                keyId: ''
             }
         }
     });
