--- a/channel_html_sources/channel_634.html
+++ b/channel_html_sources/channel_634.html
@@ -153,8 +153,8 @@
         file: "https://bpprod5catchup.akamaized.net/bpk-tv/irdeto_com_Channel_1947/output/dtvhindi.mpd",
         drm: {
             clearkey: {
-                key: 'b6a33caea139fdf1d706cfcc50d5617b',
-                keyId: 'a06ae9ccda8d56cc931c1f18390fadf6'
+                key: '',
+                keyId: ''
             }
         }
     });
