--- a/channel_html_sources/channel_638.html
+++ b/channel_html_sources/channel_638.html
@@ -153,8 +153,8 @@
         file: "https://bpprod5catchup.akamaized.net/bpk-tv/irdeto_com_Channel_1952/output/dtvhindi.mpd",
         drm: {
             clearkey: {
-                key: '15bde493685a48f245ac3a06ad7d323f',
-                keyId: '41f35a777c49595d9cd1d18958e42e8c'
+                key: '',
+                keyId: ''
             }
         }
     });
