--- a/channel_html_sources/channel_641.html
+++ b/channel_html_sources/channel_641.html
@@ -153,8 +153,8 @@
         file: "https://bpprod2catchup.akamaized.net/bpk-tv/irdeto_com_Channel_1962/output/dtvhindi.mpd",
         drm: {
             clearkey: {
-                key: '8a80aa9ec72c4431ad7e871c36b787c4',
-                keyId: '29b1b20018fb5057a11cd5057d6205df'
+                key: '',
+                keyId: ''
             }
         }
     });
