--- a/channel_html_sources/channel_681.html
+++ b/channel_html_sources/channel_681.html
@@ -153,8 +153,8 @@
         file: "https://bpprod5catchup.akamaized.net/bpk-tv/irdeto_com_Channel_2065/output/dtvhindi.mpd",
         drm: {
             clearkey: {
-                key: '492d6ba4c1e9c7a7fc3c91b9916cf5c0',
-                keyId: 'c2d531c6a8955250959d381450e566f9'
+                key: '',
+                keyId: ''
             }
         }
     });
