--- a/channel_html_sources/channel_422.html
+++ b/channel_html_sources/channel_422.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-21315-je85i72w-v1/imageContent-21315-je85i72w-m5.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Zee Uttar Pradesh Uttarakhand</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Shahar Shahar Khabar</div>
 </div>
 
 <div id="jwplayerDiv"></div>
