--- a/channel_html_sources/channel_361.html
+++ b/channel_html_sources/channel_361.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/ZESA_Thumbnail-v3/ZESA_Thumbnail.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Salaam TV</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Aaj Ka Mudda</div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Sadabahar Nagme</div>
 </div>
 
 <div id="jwplayerDiv"></div>
