Add output files

--- a/channel_html_sources/channel_607.html
+++ b/channel_html_sources/channel_607.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/TPTECL_Thumbnail-v1/TPTECL_Thumbnail.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Tata Play Telugu Classics</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Vara Lakshmi Vratham</div>
 </div>
 
 <div id="jwplayerDiv"></div>
