Add output files

--- a/channel_html_sources/channel_7.html
+++ b/channel_html_sources/channel_7.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-25307-jhrhflww-v1/imageContent-25307-jhrhflww-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">STAR Plus HD</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Kismat Cross Connection</div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Diya Aur Baati Hum</div>
 </div>
 
 <div id="jwplayerDiv"></div>
