Add output files

--- a/channel_html_sources/channel_550.html
+++ b/channel_html_sources/channel_550.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/imageContent-66705-kuqnqhwg-v1/imageContent-66705-kuqnqhwg-m1.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">STAR Maa HD</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => </div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Star Maa Parivar Awards 2024</div>
 </div>
 
 <div id="jwplayerDiv"></div>
