--- a/channel_html_sources/channel_497.html
+++ b/channel_html_sources/channel_497.html
@@ -127,7 +127,7 @@
 <div id="infoBox">
     <img src="https://ltsk-cdn.s3.eu-west-1.amazonaws.com/jumpstart/Temp_Live/cdn/HLS/Channel/LKSHIMAR_Thumbnail-v4/LKSHIMAR_Thumbnail.png" background= "white" alt="Channel Logo">
     <div class="title" style="color: white">Lokshahi Marathi</div>
-    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => 5 Mins 25 Batmya / Headlines / Bulletin</div>
+    <div class="description" style="color: white">𝗣𝗿𝗼𝗴𝗿𝗮𝗺 𝗡𝗮𝗺𝗲 => Top 10 / Headlines / Breaking News / Top 20 / Top 15</div>
 </div>
 
 <div id="jwplayerDiv"></div>
